# NexusEdu

./: .env.example  README.md  fix_errors.js  force_fix.js  pubspec.yaml
.agents/skills/code-reviewer/: SKILL.md
.agents/skills/env-secrets-manager/: SKILL.md
.agents/skills/senior-backend/: SKILL.md
.agents/skills/senior-frontend/: SKILL.md
.agents/skills/senior-fullstack/: SKILL.md
.agents/skills/skill-security-auditor/: SKILL.md
.artifacts/20260625-000314-9ab733f8-c300-4bed-85ad-2a9d539c048e/: implementation_plan.artifact.md  task.artifact.md  walkthrough.artifact.md
android/: gradle.properties
android/app/: build.gradle.kts
assets/: privacy_policy.html
backend/: main.py  models.py  utils.py
backend/agents/: analytics_agent.py  assessment_agent.py  content_agent.py  interactive_agent.py  tutor_agent.py
backend/cpp_engine/: CMakeLists.txt  analytics_engine.cpp  grading_engine.cpp  indian_education.cpp  main_interface.cpp  math_engine.cpp  question_bank.cpp  quiz_engine.cpp  study_planner.cpp
backend/cpp_engine/tests/: test_engine.cpp
backend/proxy/: README.md  package.json  server.js
backend/tests/: test_agents.py
lib/: main.dart
lib/core/data/: learning_catalog.dart  monetization_catalog.dart
lib/core/models/: app_user.dart  study_note.dart
lib/core/network/: api_client.dart
lib/core/providers/: ai_provider.dart  auth_provider.dart
lib/core/repositories/: auth_repository.dart
lib/core/services/: ai_agent_service.dart  (+14 more)
test/unit/: models_test.dart  result_test.dart
test/widget/: nexus_button_test.dart  nexus_card_test.dart
(+180 files in other folders)
